/**
 * PodFormation is responsible for grouping students into pods using the 
 * provided {@link StudentGraph} structure.
 */
public class PodFormation {
    /** The student graph used for pod formation */
    private StudentGraph graph;

    /**
     * Construct a PodFormation instance bound to a StudentGraph.
     *
     * @param graph the student graph used to form pods and inspect relationships
     */
    public PodFormation(StudentGraph graph) {
        this.graph = graph;
    }

    /**
     * Forms pods of the specified size from the graph.
     *
     * @param podSize the desired size of each pod
     */
    public void formPods(int podSize) {
        // Method signature only
    }
}
